--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Valentine Quiz</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
+  <div id="background">
+    <!-- Floating emojis -->
+    <div class="emoji">🥀</div>
+    <div class="emoji">🥺</div>
+    <div class="emoji">😭</div>
+    <div class="emoji">🎀</div>
+  </div>
+
   <div id="app">
-    <!-- All pages will be rendered here by JS -->
+    <!-- All pages rendered by JS -->
   </div>
 
   <script src="script.js"></script>
